--- a/winter/204B/2020/01/20200106.tex
+++ b/winter/204B/2020/01/20200106.tex
@@ -29,7 +29,7 @@ That is, for an operator given by
 \end{equation}
 we must check that
 \begin{equation}
-    \int \psi^* (\div (p\grad \phi)) + \int q \psi^* \phi = \int \div (p \grad \phi^*)\phi + \int q \psi^* \phi.
+    \int \psi^* (\div (p\grad \phi)) + \int q \psi^* \phi = \int \div (p \grad \psi^*)\phi + \int q \psi^* \phi.
 \end{equation}
 The $q$ terms cancel, so we find that
 \begin{equation}
@@ -37,13 +37,13 @@ The $q$ terms cancel, so we find that
 \end{equation}
 and if we integrate by parts, then
 \begin{equation}
-    \int \div(\psi^* p \grad \phi - (\grad \psi^*) p \phi) =0.
+    \int_V dV\, \div(\psi^* p \grad \phi - (\grad \psi^*) p \phi) =0.
 \end{equation}
 By the divergence theorem,
 \begin{equation}
-    \int_S p\bkt{ \psi^* \grad \phi -(\grad \psi^*)\phi} =0.
+    \int_S d\vec{S} \cdot p\bkt{ \psi^* \grad \phi -(\grad \psi^*)\phi} =0.
 \end{equation}
-Dirichlet or Neumann boundary conditions will guarantee self-adjointness. There are also mixed conditions, but these sorts of conditions are sufficient to make our operator Hermitian.
+Dirichlet or Neumann boundary conditions will guarantee self-adjointness. That is, if the functions vanish on $S$ or their normal derivatives vanish on $S$, then $\cL$ is self-adjoint. There are also mixed conditions we could impose, but Dirichlet and Neumann conditions are sufficient to make our operator Hermitian.
 
 For a Hermitian operator, the corresponding Green's function obeys%
     \footnote{This property is also responsible for Green's reciprocity theorem in electromagnetism, i.e. the statement that the potential energy of a charge distribution $\rho_2$ in a field produced by another distribution $\rho_2$ is equal to the energy of $\rho_1$ in the field produced by $\rho_2$. If you like, the theorem is a special case/application since the Laplacian operator is Hermitian.}
@@ -133,7 +133,7 @@ Let's consider some examples. The Laplace equation is
 \begin{equation}
     \grad^2 \phi = J,
 \end{equation}
-and it is of self-adjoint form,
+and it is already in self-adjoint form,
 \begin{equation}
     \div(\grad G) = \delta(\vec r_1-\vec r_2).
 \end{equation}
@@ -150,7 +150,7 @@ But now
 \begin{equation}
     \int_V dV  \grad^2 (\phi + \chi) = \int_V J = Q.
 \end{equation}
-We can rewrite the first epxression as a surface integral, $\int d\vec S \cdot \grad(\phi + \chi)$. Hence we find that since the integral of the $\grad \phi$ term is already $Q$, it must be that
+We can rewrite the first expression as a surface integral, $\int d\vec S \cdot \grad(\phi + \chi)$. Hence we find that since the integral of the $\grad \phi$ term is already $Q$, it must be that
 \begin{equation}
     \int d\vec S \cdot \grad \chi =0,
 \end{equation}
