Commit for January 9. Gauss's law and Green's reciprocity relation.

--- a/winter/200B/200B-notes-ucd.tex
+++ b/winter/200B/200B-notes-ucd.tex
@@ -13,5 +13,6 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
 
 \section{Tuesday, January 7, 2020}
 	\input{2020/01/20200107.tex}
-
+\section{Thursday, January 9, 2020}
+    \input{2020/01/20200109.tex}
 \end{document}
