--- a/winter/204B/2020/01/20200108.tex
+++ b/winter/204B/2020/01/20200108.tex
@@ -97,7 +97,7 @@ where $V$ is a sphere centered on the origin. In the limit of very small spheres
 \begin{equation}
     \int d\vec{S} \cdot \grad G =1,
 \end{equation}
-while away from the origin, our delta function is zero. We can exploit the spherical symmetry to rewrite the laplacian as
+while away from the origin, our delta function is zero. We can exploit the spherical symmetry to rewrite the lLplacian as
 \begin{equation}
     \frac{1}{r^2} \p_r(r^2 \p_r G) + k^2 G =0.
 \end{equation}
