Additional content on orthogonality of sines. (non-lectured)

--- a/winter/204B/2020/01/20200108.tex
+++ b/winter/204B/2020/01/20200108.tex
@@ -1,5 +1,5 @@
 \begin{quote}
-    \textit{``If I had taken a potato instead of a box, I would be hard pressed to do this. It would be much much harder. Except in two dimensions. Two-dimensional potatoes are very cool because Laplacians in 2 dimensions are special.''}
+    \textit{``If I had taken a potato instead of a box, I would be hard-pressed to do this. It would be much much harder. Except in two dimensions. Two-dimensional potatoes are very cool because Laplacians in 2 dimensions are special.''}
     
     --Nemanja Kaloper
 \end{quote}
