--- a/winter/204B/204B-notes-ucd.tex
+++ b/winter/204B/204B-notes-ucd.tex
@@ -16,8 +16,8 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
 	\input{2020/01/20200106.tex}
 \section{Wednesday, January 8, 2020}
     \input{2020/01/20200108.tex}
-% \section{Friday, January 10, 2020}
-%     \input{2020/01/20200110.tex}
+\section{Friday, January 10, 2020}
+    \input{2020/01/20200110.tex}
 
 % % week 2
 % \section{Monday, January 13, 2020}
