More on Fourier series.

--- a/winter/204B/204B-notes-ucd.tex
+++ b/winter/204B/204B-notes-ucd.tex
@@ -19,9 +19,9 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
 \section{Friday, January 10, 2020}
     \input{2020/01/20200110.tex}
 
-% % week 2
-% \section{Monday, January 13, 2020}
-% 	\input{2020/01/20200113.tex}
+% week 2
+\section{Monday, January 13, 2020}
+	\input{2020/01/20200113.tex}
 % \section{Wednesday, January 15, 2020}
 %     \input{2020/01/20200115.tex}
 % \section{Friday, January 17, 2020}
