--- a/winter/215B/215B-notes-ucd.tex
+++ b/winter/215B/215B-notes-ucd.tex
@@ -17,9 +17,9 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
 \section{Wednesday, January 8, 2020}
     \input{2020/01/20200108.tex}
 
-% % week 2
-% \section{Monday, January 13, 2020}
-% 	\input{2020/01/20200113.tex}
+% week 2
+\section{Monday, January 13, 2020}
+	\input{2020/01/20200113.tex}
 % \section{Wednesday, January 15, 2020}
 %     \input{2020/01/20200115.tex}
 
