--- a/winter/200B/200B-notes-ucd.tex
+++ b/winter/200B/200B-notes-ucd.tex
@@ -11,8 +11,13 @@ Many thanks to Arun Debray for the {\LaTeX} template for these lecture notes: as
 
 \tableofcontents
 
+%week 1
 \section{Tuesday, January 7, 2020}
 	\input{2020/01/20200107.tex}
 \section{Thursday, January 9, 2020}
     \input{2020/01/20200109.tex}
+    
+%week 2
+\section{Tuesday, January 14, 2020}
+    \input{2020/01/20200114.tex}
 \end{document}
